fix(kit): `Toast` fix line height on mobile (#14295)

--- a/projects/styles/components/toast.less
+++ b/projects/styles/components/toast.less
@@ -7,7 +7,7 @@
     grid-auto-flow: column;
     grid-row: 1 / span 2;
     box-sizing: border-box;
-    gap: 0.75rem;
+    gap: 0 0.75rem;
     color: var(--tui-text-primary);
     background: var(--tui-background-elevation-3);
     min-block-size: 3.5rem;
@@ -51,6 +51,7 @@
 
     tui-loader,
     [tuiButton] {
+        inline-size: fit-content;
         min-inline-size: fit-content;
     }
 }
